workshop/demos/healthcare-assistant/password-protection/updated-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: healthcare-assistant-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-basicauth@kubernetescrd
spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - healthcare-assistant.splunko11y.com
      secretName: healthcare-assistant-tls

  rules:
    - host: healthcare-assistant.splunko11y.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: healthcare-assistant-service
                port:
                  number: 8501
